just basic change

--- a/plotly_tutorial.ipynb
+++ b/plotly_tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plotly Tutorial"
+    "## **Plotly Tutorial**"
    ]
   },
   {
@@ -21,6 +21,13 @@
    "outputs": [],
    "source": [
     "import plotly.express as px"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "📈 Plotting the scatterd chart"
    ]
   },
   {
