some change in lab 4

--- a/lab_4_polynomial_regression.ipynb
+++ b/lab_4_polynomial_regression.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "4 -0.03199 -0.04664  "
       ]
      },
-     "execution_count": 393,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
        "max     0.18523   0.13360   0.13561 346.00000  "
       ]
      },
-     "execution_count": 396,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 397,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
        "Text(0.5, 1.0, 'Correlation matrix')"
       ]
      },
-     "execution_count": 398,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -555,6 +555,7 @@
    "source": [
     "\n",
     "**Key corelation of features with target:**\n",
+    "\n",
     "|Feature|Corelation Type|\n",
     "|-------|---------------|\n",
     "|BMI|Positive|\n",
@@ -578,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +588,7 @@
        "Text(0.5, 0, 'Target')"
       ]
      },
-     "execution_count": 413,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -622,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +632,7 @@
        "Text(0.5, 0, 'Target')"
       ]
      },
-     "execution_count": 400,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -675,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +804,7 @@
        "4 -0.03199 -0.04664 135.00000  "
       ]
      },
-     "execution_count": 401,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +992,7 @@
        "5  [1467.1306654958705, -512.3554170679898, -2066...  155.32947"
       ]
      },
-     "execution_count": 404,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1092,102 +1093,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_29f77_row0_col1, #T_29f77_row0_col2, #T_29f77_row2_col6, #T_29f77_row3_col3, #T_29f77_row5_col4, #T_29f77_row5_col5 {\n",
+       "#T_216f7_row0_col1, #T_216f7_row0_col2, #T_216f7_row2_col6, #T_216f7_row3_col3, #T_216f7_row5_col4, #T_216f7_row5_col5 {\n",
        "  background-color: #FF6868;\n",
        "}\n",
-       "#T_29f77_row0_col3, #T_29f77_row0_col4, #T_29f77_row0_col5, #T_29f77_row0_col6, #T_29f77_row2_col2, #T_29f77_row5_col1 {\n",
+       "#T_216f7_row0_col3, #T_216f7_row0_col4, #T_216f7_row0_col5, #T_216f7_row0_col6, #T_216f7_row2_col2, #T_216f7_row5_col1 {\n",
        "  background-color: #65B741;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_29f77\">\n",
+       "<table id=\"T_216f7\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_29f77_level0_col0\" class=\"col_heading level0 col0\" >Degree</th>\n",
-       "      <th id=\"T_29f77_level0_col1\" class=\"col_heading level0 col1\" >Train R-Squared</th>\n",
-       "      <th id=\"T_29f77_level0_col2\" class=\"col_heading level0 col2\" >Validation R-Squared</th>\n",
-       "      <th id=\"T_29f77_level0_col3\" class=\"col_heading level0 col3\" >Train MAPE</th>\n",
-       "      <th id=\"T_29f77_level0_col4\" class=\"col_heading level0 col4\" >Validation MAPE</th>\n",
-       "      <th id=\"T_29f77_level0_col5\" class=\"col_heading level0 col5\" >Train MAE</th>\n",
-       "      <th id=\"T_29f77_level0_col6\" class=\"col_heading level0 col6\" >Validation MAE</th>\n",
+       "      <th id=\"T_216f7_level0_col0\" class=\"col_heading level0 col0\" >Degree</th>\n",
+       "      <th id=\"T_216f7_level0_col1\" class=\"col_heading level0 col1\" >Train R-Squared</th>\n",
+       "      <th id=\"T_216f7_level0_col2\" class=\"col_heading level0 col2\" >Validation R-Squared</th>\n",
+       "      <th id=\"T_216f7_level0_col3\" class=\"col_heading level0 col3\" >Train MAPE</th>\n",
+       "      <th id=\"T_216f7_level0_col4\" class=\"col_heading level0 col4\" >Validation MAPE</th>\n",
+       "      <th id=\"T_216f7_level0_col5\" class=\"col_heading level0 col5\" >Train MAE</th>\n",
+       "      <th id=\"T_216f7_level0_col6\" class=\"col_heading level0 col6\" >Validation MAE</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_29f77_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_29f77_row0_col0\" class=\"data row0 col0\" >0</td>\n",
-       "      <td id=\"T_29f77_row0_col1\" class=\"data row0 col1\" >0.000000</td>\n",
-       "      <td id=\"T_29f77_row0_col2\" class=\"data row0 col2\" >-0.029480</td>\n",
-       "      <td id=\"T_29f77_row0_col3\" class=\"data row0 col3\" >0.633432</td>\n",
-       "      <td id=\"T_29f77_row0_col4\" class=\"data row0 col4\" >0.470503</td>\n",
-       "      <td id=\"T_29f77_row0_col5\" class=\"data row0 col5\" >5508.803129</td>\n",
-       "      <td id=\"T_29f77_row0_col6\" class=\"data row0 col6\" >3483.674329</td>\n",
+       "      <th id=\"T_216f7_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_216f7_row0_col0\" class=\"data row0 col0\" >0</td>\n",
+       "      <td id=\"T_216f7_row0_col1\" class=\"data row0 col1\" >0.000000</td>\n",
+       "      <td id=\"T_216f7_row0_col2\" class=\"data row0 col2\" >-0.029480</td>\n",
+       "      <td id=\"T_216f7_row0_col3\" class=\"data row0 col3\" >0.633432</td>\n",
+       "      <td id=\"T_216f7_row0_col4\" class=\"data row0 col4\" >0.470503</td>\n",
+       "      <td id=\"T_216f7_row0_col5\" class=\"data row0 col5\" >5508.803129</td>\n",
+       "      <td id=\"T_216f7_row0_col6\" class=\"data row0 col6\" >3483.674329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_29f77_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_29f77_row1_col0\" class=\"data row1 col0\" >1</td>\n",
-       "      <td id=\"T_29f77_row1_col1\" class=\"data row1 col1\" >0.246023</td>\n",
-       "      <td id=\"T_29f77_row1_col2\" class=\"data row1 col2\" >0.291559</td>\n",
-       "      <td id=\"T_29f77_row1_col3\" class=\"data row1 col3\" >0.525075</td>\n",
-       "      <td id=\"T_29f77_row1_col4\" class=\"data row1 col4\" >0.379627</td>\n",
-       "      <td id=\"T_29f77_row1_col5\" class=\"data row1 col5\" >4153.512699</td>\n",
-       "      <td id=\"T_29f77_row1_col6\" class=\"data row1 col6\" >2397.304018</td>\n",
+       "      <th id=\"T_216f7_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_216f7_row1_col0\" class=\"data row1 col0\" >1</td>\n",
+       "      <td id=\"T_216f7_row1_col1\" class=\"data row1 col1\" >0.246023</td>\n",
+       "      <td id=\"T_216f7_row1_col2\" class=\"data row1 col2\" >0.291559</td>\n",
+       "      <td id=\"T_216f7_row1_col3\" class=\"data row1 col3\" >0.525075</td>\n",
+       "      <td id=\"T_216f7_row1_col4\" class=\"data row1 col4\" >0.379627</td>\n",
+       "      <td id=\"T_216f7_row1_col5\" class=\"data row1 col5\" >4153.512699</td>\n",
+       "      <td id=\"T_216f7_row1_col6\" class=\"data row1 col6\" >2397.304018</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_29f77_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_29f77_row2_col0\" class=\"data row2 col0\" >2</td>\n",
-       "      <td id=\"T_29f77_row2_col1\" class=\"data row2 col1\" >0.246855</td>\n",
-       "      <td id=\"T_29f77_row2_col2\" class=\"data row2 col2\" >0.300220</td>\n",
-       "      <td id=\"T_29f77_row2_col3\" class=\"data row2 col3\" >0.523390</td>\n",
-       "      <td id=\"T_29f77_row2_col4\" class=\"data row2 col4\" >0.376120</td>\n",
-       "      <td id=\"T_29f77_row2_col5\" class=\"data row2 col5\" >4148.927764</td>\n",
-       "      <td id=\"T_29f77_row2_col6\" class=\"data row2 col6\" >2367.996510</td>\n",
+       "      <th id=\"T_216f7_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_216f7_row2_col0\" class=\"data row2 col0\" >2</td>\n",
+       "      <td id=\"T_216f7_row2_col1\" class=\"data row2 col1\" >0.246855</td>\n",
+       "      <td id=\"T_216f7_row2_col2\" class=\"data row2 col2\" >0.300220</td>\n",
+       "      <td id=\"T_216f7_row2_col3\" class=\"data row2 col3\" >0.523390</td>\n",
+       "      <td id=\"T_216f7_row2_col4\" class=\"data row2 col4\" >0.376120</td>\n",
+       "      <td id=\"T_216f7_row2_col5\" class=\"data row2 col5\" >4148.927764</td>\n",
+       "      <td id=\"T_216f7_row2_col6\" class=\"data row2 col6\" >2367.996510</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_29f77_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_29f77_row3_col0\" class=\"data row3 col0\" >3</td>\n",
-       "      <td id=\"T_29f77_row3_col1\" class=\"data row3 col1\" >0.253773</td>\n",
-       "      <td id=\"T_29f77_row3_col2\" class=\"data row3 col2\" >0.293519</td>\n",
-       "      <td id=\"T_29f77_row3_col3\" class=\"data row3 col3\" >0.516585</td>\n",
-       "      <td id=\"T_29f77_row3_col4\" class=\"data row3 col4\" >0.374589</td>\n",
-       "      <td id=\"T_29f77_row3_col5\" class=\"data row3 col5\" >4110.818383</td>\n",
-       "      <td id=\"T_29f77_row3_col6\" class=\"data row3 col6\" >2390.673601</td>\n",
+       "      <th id=\"T_216f7_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_216f7_row3_col0\" class=\"data row3 col0\" >3</td>\n",
+       "      <td id=\"T_216f7_row3_col1\" class=\"data row3 col1\" >0.253773</td>\n",
+       "      <td id=\"T_216f7_row3_col2\" class=\"data row3 col2\" >0.293519</td>\n",
+       "      <td id=\"T_216f7_row3_col3\" class=\"data row3 col3\" >0.516585</td>\n",
+       "      <td id=\"T_216f7_row3_col4\" class=\"data row3 col4\" >0.374589</td>\n",
+       "      <td id=\"T_216f7_row3_col5\" class=\"data row3 col5\" >4110.818383</td>\n",
+       "      <td id=\"T_216f7_row3_col6\" class=\"data row3 col6\" >2390.673601</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_29f77_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_29f77_row4_col0\" class=\"data row4 col0\" >4</td>\n",
-       "      <td id=\"T_29f77_row4_col1\" class=\"data row4 col1\" >0.254735</td>\n",
-       "      <td id=\"T_29f77_row4_col2\" class=\"data row4 col2\" >0.286894</td>\n",
-       "      <td id=\"T_29f77_row4_col3\" class=\"data row4 col3\" >0.517067</td>\n",
-       "      <td id=\"T_29f77_row4_col4\" class=\"data row4 col4\" >0.375318</td>\n",
-       "      <td id=\"T_29f77_row4_col5\" class=\"data row4 col5\" >4105.518564</td>\n",
-       "      <td id=\"T_29f77_row4_col6\" class=\"data row4 col6\" >2413.091803</td>\n",
+       "      <th id=\"T_216f7_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_216f7_row4_col0\" class=\"data row4 col0\" >4</td>\n",
+       "      <td id=\"T_216f7_row4_col1\" class=\"data row4 col1\" >0.254735</td>\n",
+       "      <td id=\"T_216f7_row4_col2\" class=\"data row4 col2\" >0.286894</td>\n",
+       "      <td id=\"T_216f7_row4_col3\" class=\"data row4 col3\" >0.517067</td>\n",
+       "      <td id=\"T_216f7_row4_col4\" class=\"data row4 col4\" >0.375318</td>\n",
+       "      <td id=\"T_216f7_row4_col5\" class=\"data row4 col5\" >4105.518564</td>\n",
+       "      <td id=\"T_216f7_row4_col6\" class=\"data row4 col6\" >2413.091803</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_29f77_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
-       "      <td id=\"T_29f77_row5_col0\" class=\"data row5 col0\" >5</td>\n",
-       "      <td id=\"T_29f77_row5_col1\" class=\"data row5 col1\" >0.254964</td>\n",
-       "      <td id=\"T_29f77_row5_col2\" class=\"data row5 col2\" >0.295313</td>\n",
-       "      <td id=\"T_29f77_row5_col3\" class=\"data row5 col3\" >0.518085</td>\n",
-       "      <td id=\"T_29f77_row5_col4\" class=\"data row5 col4\" >0.373997</td>\n",
-       "      <td id=\"T_29f77_row5_col5\" class=\"data row5 col5\" >4104.256770</td>\n",
-       "      <td id=\"T_29f77_row5_col6\" class=\"data row5 col6\" >2384.601198</td>\n",
+       "      <th id=\"T_216f7_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_216f7_row5_col0\" class=\"data row5 col0\" >5</td>\n",
+       "      <td id=\"T_216f7_row5_col1\" class=\"data row5 col1\" >0.254964</td>\n",
+       "      <td id=\"T_216f7_row5_col2\" class=\"data row5 col2\" >0.295313</td>\n",
+       "      <td id=\"T_216f7_row5_col3\" class=\"data row5 col3\" >0.518085</td>\n",
+       "      <td id=\"T_216f7_row5_col4\" class=\"data row5 col4\" >0.373997</td>\n",
+       "      <td id=\"T_216f7_row5_col5\" class=\"data row5 col5\" >4104.256770</td>\n",
+       "      <td id=\"T_216f7_row5_col6\" class=\"data row5 col6\" >2384.601198</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x211547fef50>"
+       "<pandas.io.formats.style.Styler at 0x1caadc6b410>"
       ]
      },
-     "execution_count": 407,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1302,7 +1303,7 @@
        "2               0.30022          0.37612      2367.99651"
       ]
      },
-     "execution_count": 408,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1328,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
