--- a/lab_4_polynomial_regression.ipynb
+++ b/lab_4_polynomial_regression.ipynb
@@ -43,7 +43,8 @@
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_percentage_error,r2_score\n",
-    "from sklearn.pipeline import Pipeline"
+    "from sklearn.pipeline import Pipeline\n",
+    "\n"
    ]
   },
   {
